--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Helvetica:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Helvetica+Light:wght@400&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+body {
+  	@apply leading-[normal] m-0;
+}
+*, ::before, ::after { border-width: 0; }
