--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+html{
+	scroll-behavior: smooth;
+	
+}
 body {
   	@apply leading-[normal] m-0;
 }
